--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ body {
     justify-content: center;
     align-items: center;
     perspective: 2000px;
-    overflow: auto;
+    overflow: hidden;
     position: relative;
     flex-direction: column;
     padding: 20px;
